pre components complete

--- a/index.html
+++ b/index.html
@@ -3,9 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>From Portland to Portland</title>
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
-<body>
-    
+<body class="page">
+  <div class="page__container">
+
+    <header class="header">
+      <img src="./images/logo.svg" alt="reduced map of the U.S." class="logo">
+      <nav class="header__lang-links">
+        <a class="header__lang-link" href="#">En</a>
+        <a class="header__lang-link" href="">Es</a>
+      </nav>
+    </header>
+
+    <main class="content">
+      <section class="lead">
+        <h1 class="lead__title">
+          From Portland to Portland
+        </h1>
+        <h3 class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</h3>
+        <img src="./images/mountains.jpg" alt="black&white photo of mountains" class="lead__image">
+        <p class="lead__caption">Your journey starts here</p>
+      </section>
+
+      <section class="intro">
+        <h2 class="intro__title">Know the country you live in a little better</h2>
+        <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story</p>
+        <p class="intro__text">Need more action and adventure in your life instead of the same old routine? From Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown regions of your country. Leave the car at home and travel by bike starting in New England where it all began. You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental missions. Partying and taking a selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
+        <ul class="intro__list">
+          <li class="intro__list"><strong>Distance (miles)</strong> 3,644</li>
+          <li class="intro__list"><strong>Travel time (days)</strong> 22</li>
+          <li class="intro__list"><strong>Highest point (feet)</strong> 9,613</li>
+          <li class="intro__list"><strong>Lowest point (feet)</strong> -3</li>
+        </ul>
+
+      </section>
+
+      <section class="photo-grid">
+         <img src="./images/__item-11.jpg" alt="road between lake and mountain" class="photo-grid__item">
+         <img src="./images/__item-10.jpg" alt="frozen lake" class="photo-gri__item">
+         <img src="./images/__item-9.jpg" alt="cotton field" class="photo-grid__item">
+         <img src="./images/__item-8.jpg" alt="forest in the mist" class="photo-grid__item">
+         <img src="./images/__item-7.jpg" alt="lake in the mist" class="photo-grid__item">
+         <img src="./images/__item-6.jpg" alt="hills in the mist" class="photo-grid__item">
+         <img src="./images/__item-5.jpg" alt="rocky mountains" class="photo-grid__item">
+         <img src="./images/__item-4.jpg" alt="pink bush branch" class="photo-grid__item">
+         <img src="./images/__item-3.jpg" alt="yellow hills" class="photo-grid__item">
+         <img src="./images/__item-2.jpg" alt="small desert lake" class="photo-grid__item">
+         <img src="./images/__item-1.jpg" alt="birds sitting on a wires" class="photo-grid__item">
+         <img src="./images/__item-12.jpg" alt="countryside road" class="photo-grid__item">
+      </section>
+
+      <section class="places">
+        <div class="place">
+          <h3 class="place__title">Maine</h3>
+          <img src="./images/__image-4.jpg" alt="photo of a lighthouse and ocean" class="place__image">
+          <ul class="place__website">
+            <li class="place__url-heading">URL</li>
+            <li class="place__link"><a class="place__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a></li>
+          </ul>
+          <ul class="place__paragraph">
+            <li class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.</li>
+            <li class="place__paragraph">Thankfully, not only is Maine home to the very first European settlers on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy backpack from for your 3-month expedition.</li>
+            <li class="place__paragraph">Average cost: $80-100.</li>
+          </ul>
+          <!-- <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.</p>
+          <p class="place__paragraph">Thankfully, not only is Maine home to the very first European settlers on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy backpack from for your 3-month expedition.</p>
+          <p class="place__paragraph">Average cost: $80-100.</p> -->
+        </div>
+        <div class="place">
+          <h3 class="place__title">New Hampshire</h3>
+          <img src="./images/__image-3.jpg" alt="photo of a road between a forest and hills" class="place__image">
+          <ul class="place__website">
+            <li class="place__url-heading">URL</li>
+            <li class="place__link"><a class="place__link" href="ttps://www.timberland.com/timberlandpro.html">timberland.com</a></li>
+          </ul>
+          <ul class="place__paragraph">
+            <li class="place__paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the South. So enjoy it while it lasts.</li>
+            <li class="place__paragraph">You won't be on your bike the whole time, so doesn't it make sense to pick up some extra footwear? Fortunately for you, the best outdoor shoe company in the history of the world proudly hails from this state. Cycle by the Timberland headquarters in Stratham, and pick up a pair of rugged, waterproof boots to keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through the Appalachians. These boots are also better than cycling shoes when pitching a tent.</li>
+            <li class="place__paragraph">Average cost: $100-150.</li>
+          </ul>
+
+        </div>
+        <div class="place">
+          <h3 class="place__title">New York</h3>
+          <img src="./images/__image-2.jpg" alt="photo of a street in New York City" class="place__image">
+          <ul class="place__website">
+            <li class="place__url-heading">URL</li>
+            <li class="place__link"><a class="place__link" href="https://www.ge.com/about-us">ge.com</a></li>
+          </ul>
+          <ul class="place__paragraph">
+            <li class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.</li>
+            <li class="place__paragraph">This is where modern power generators were born as well as contemporary means of transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.</li>
+          </ul>
+        </div>
+        <div class="place">
+          <h3 class="place__title">Erie, PA</h3>
+          <img src="./images/__image-1.jpg" alt="photo of a small waterfall" class="place__image">
+          <ul class="place__website">
+            <li class="place__url-heading">URL</li>
+            <li class="place__link"><a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a></li>
+          </ul>
+          <ul class="place__paragraph">
+            <li class="place__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from time to time, is another town worth passing through for several different reasons. While it might be most famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war, Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)</li>
+            <li class="place__paragraph">The reason we've brought you here today, if you haven't already guessed, can be summed up by using one delicious word: chocolate. Hershey's is a Pennsylvania-based company. Most likely, one of the tastiest missions you'll ever embark on during this tour, try to find an Amish friend and enjoy a bar in the National Wildlife Refuge on your way to Erie and have an extra eerie time!</li>
+            <li class="place__paragraph">The current cost of a Hershey's Chocolate bar: about 60¢.</li>
+          </ul>
+        </div>
+        <div class="place">
+          <h3 class="place__title">Ohio</h3>
+          <img src="./images/__image.jpg" alt="photo of a windmill" class="place__image">
+          <ul class="place__website">
+            <li class="place__url-heading">URL</li>
+            <li class="place__link"><a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a></li>
+          </ul>
+
+          <ul class="place__paragraph">
+            <li class="place__paragraph">From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing shaking this centrally located state. One of the country's largest and oldest roller coaster parks is waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller coasters as you can before continue your bike ride!</li>
+            <li class="place__paragraph">The cost of a daily ticket: about $100.</li>
+          </ul>
+        </div>
+
+      </section>
+
+      <section class="cover">
+        <a href="https://www.nps.gov/nr/travel/route66/maps66.html" class="cover__link">
+          <h3 class="cover__title">Historic Route 66</h3>
+          <h4 class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe</h4>
+        </a>
+      </section>
+
+
+    </main>
+    <footer class="footer">
+      <nav class="footer__links">
+        <ul>
+          <li class="footer__links"><a href="https://yandex.com/maps" class="footer__link">Maps</a></li>
+          <li class="footer__links"><a href="https://yandex.com/weather/moscow" class="footer__link">Weather</a></li>
+          <li class="footer__links"><a href="https://www.any.do/" class="footer__link">Calendar</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">© 2020. Alex Vakhitov</p>
+    </footer>
+  </div>
 </body>
 </html>
