--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Alex's Portfolio at Practicum Yandex">
+    <meta name="keywords" content="html, css">
+    <meta name="author" content="Alex Vakhitov">
     <title>From Portland to Portland</title>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
@@ -13,7 +16,7 @@
       <img src="./images/logo.svg" alt="reduced map of the U.S." class="logo">
       <nav class="header__lang-links">
         <a class="header__lang-link" href="#">En</a>
-        <a class="header__lang-link" href="">Es</a>
+        <a class="header__lang-link" href="#">Es</a>
       </nav>
     </header>
 
