--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img src="./images/__image-4.jpg" alt="photo of a lighthouse and ocean" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <p class="place__link"><a class="place__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a></p>
+            <a class="place__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1" target="_blank">global.llbean.com</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.</p>
@@ -85,7 +85,7 @@
           <img src="./images/__image-3.jpg" alt="photo of a road between a forest and hills" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <p class="place__link"><a class="place__link" href="ttps://www.timberland.com/timberlandpro.html">timberland.com</a></p>
+            <a class="place__link" href="ttps://www.timberland.com/timberlandpro.html" target="_blank">timberland.com</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the South. So enjoy it while it lasts.</p>
@@ -99,7 +99,7 @@
           <img src="./images/__image-2.jpg" alt="photo of a street in New York City" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <p class="place__link"><a class="place__link" href="https://www.ge.com/about-us">ge.com</a></p>
+            <a class="place__link" href="https://www.ge.com/about-us" target="_blank">ge.com</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.</p>
@@ -111,7 +111,7 @@
           <img src="./images/__image-1.jpg" alt="photo of a small waterfall" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <p class="place__link"><a class="place__link" href="https://www.fws.gov/refuge/erie">www.fws.gov</a></p>
+            <a class="place__link" href="https://www.fws.gov/refuge/erie" target="_blank">www.fws.gov</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from time to time, is another town worth passing through for several different reasons. While it might be most famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war, Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)</p>
@@ -124,7 +124,7 @@
           <img src="./images/__image.jpg" alt="photo of a windmill" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <p class="place__link"><a class="place__link" href="https://www.cedarpoint.com">cedarpoint.com</a></p>
+            <a class="place__link" href="https://www.cedarpoint.com" target="_blank">cedarpoint.com</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing shaking this centrally located state. One of the country's largest and oldest roller coaster parks is waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller coasters as you can before continue your bike ride!</p>
