correcting link in the New Hampshire block

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <img src="./images/__image-3.jpg" alt="photo of a road between a forest and hills" class="place__image">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="ttps://www.timberland.com/timberlandpro.html" target="_blank">timberland.com</a>
+            <a class="place__link" href="https://www.timberland.com/timberlandpro.html" target="_blank">timberland.com</a>
           </div>
           <div class="place__paragraph">
             <p class="place__paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the South. So enjoy it while it lasts.</p>
